# CAPSTONE_PROJECT

./: .gitignore  GrandSystem.excalidraw  README.md  pyproject.toml  requirements.txt
agent/: comms.py  gay.txt  interAgent.py  models.py  orchestrator.py  padOG.txt  prompt.py  schema.py  socket.py  test.py
agent/tools/: __init__.py  md.py  tools.py
agentic_ai/: chat_data.py  service.py  test.py
agentic_ai/agent/: agents.py  events.py  output_response.py  prompts.py  state.py  workflow.py
agentic_ai/const/: milvus.py
agentic_ai/core/: app_state.py
agentic_ai/tools/: __init__.py
backend/: .gitignore  main.py  pyproject.toml
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.jsx  index.css
ingestion/: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
ingestion/api/: health.py  management.py  upload.py
ingestion/core/: __init__.py  app_state.py  lifespan.py  models.py  settings.py  storage.py
ingestion/docs/: architecture.md
ingestion/flow/: video_processing.py
ingestion/prefect_agent/service_autoshot/: .env.example  Dockerfile  main.py  pyproject.toml  schema.py
ingestion/prefect_agent/service_autoshot/core/: api.py  config.py  dependency.py  lifespan.py  service.py
ingestion/prefect_agent/service_autoshot/model/: __init__.py  autoshot.py  registry.py  utils.py
ingestion/prefect_agent/service_image_embedding/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  schema.py
ingestion/prefect_agent/service_image_embedding/core/: api.py  config.py  dependencies.py  lifespan.py  service.py
ingestion/prefect_agent/service_image_embedding/model/: registry.py
ingestion/prefect_agent/service_image_embedding/model/beit3/: beit3_embedding.py  procesor.py
ingestion/prefect_agent/service_image_embedding/model/open_clip/: openclip_embedding.py
ingestion/prefect_agent/service_llm/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  schema.py
ingestion/prefect_agent/service_llm/core/: api.py  config.py  dependencies.py  lifespan.py  service.py
ingestion/prefect_agent/service_llm/model/: __init__.py  gemini.py  openrouter.py  registry.py
ingestion/prefect_agent/service_text_embedding/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  schema.py
ingestion/prefect_agent/service_text_embedding/core/: api.py  config.py  dependencies.py  lifespan.py  service.py
ingestion/prefect_agent/service_text_embedding/model/: __init__.py  mmbert.py  registry.py  sentence_transformers.py
(+126 files in other folders)
