[project]
name = "service-autoshot"
version = "0.1.0"
description = "Video shot boundary detection service using TransNetV2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi[standard]>=0.118.1",
    "ffmpeg-python>=0.2.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "minio>=7.2.18",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pymilvus>=2.6.2",
    "python-consul2>=0.1.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]


