[project]
name = "service-image-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.0",
    "fastapi[standard]>=0.118.3",
    "loguru>=0.7.3",
    "minio>=7.2.18",
    "open-clip-torch>=3.2.0",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-consul2>=0.1.5",
    "requests>=2.32.5",
    "tensorboardx>=2.6.4",
    "torch>=2.8.0",
    "torchmetrics>=1.8.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]
