[project]
name = "service-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.0",
    "fastapi[standard]>=0.118.3",
    "genai>=2.1.0",
    "google-generativeai>=0.8.5",
    "llama-index>=0.8.62",
    "loguru>=0.7.3",
    "mlx-vlm>=0.3.4",
    "pillow>=11.3.0",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-consul2>=0.1.5",
    "torch>=2.8.0",
    "uvicorn>=0.37.0",
]
