[project]
name = "service-text-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.0",
    "fastapi[standard]>=0.118.2",
    "loguru>=0.7.3",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-consul2>=0.1.5",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]
